update securutyconfigi.java